--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=api
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/forohub_api
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
